# autoclicker

./: Cargo.toml  LICENSE  README.md
src/: args.rs  device.rs  lib.rs  main.rs
