[package]
name = "theclicker"
version = "0.1.6"
edition = "2021"
license = "MIT"
authors = ["konkitoman"]
description = "A simple autoclicker cli that works on (x11/wayland)"
repository = "https://github.com/konkitoman/autoclicker"
keywords = ["autoclicker", "theclicker"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
input-linux = "0.6.0"
clap = { version = "4.4.3", features = ["derive"] }
ron = "0.8.1"
serde = { version = "1.0.190", features = ["derive"] }
