[package]
name = "theclicker"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["konkitoman"]
description = "A simple autoclicker cli that works on (x11/wayland)"
repository = "https://github.com/konkitoman/autoclicker"
keywords = ["autoclicker", "theclicker"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
input-linux = "0.7.1"
clap = { version = "4.5.26", features = ["derive"] }
nix = "0.29.0"
