[package]
name = "theclicker"
version = "0.3.1"
edition = "2024"
license = "MIT"
authors = ["konkitoman"]
description = "A simple autoclicker cli that works on (x11/wayland)"
repository = "https://github.com/konkitoman/autoclicker"
keywords = ["autoclicker", "theclicker"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
input-linux = "0.7.1"
clap = { version = "4.5.53", features = ["derive"] }
nix = "0.30.1"
